force-app/main/default/objects/KimbleOne__CostBehaviourRuleRateCard__c/KimbleOne__CostBehaviourRuleRateCard__c.object-meta.xml
<CustomObject>
    <label>Cost Behaviour Rule Rate Card</label>
    <nameField>
        <label>Cost Behaviour Rule Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Behaviour Rule Rate Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>