force-app/main/default/objects/KimbleOne__CostBehaviourRuleRateCard__c/fields/KimbleOne__CostBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostBehaviourRule__c</fullName>
    <label>Cost Behaviour Rule</label>
    <referenceTo>KimbleOne__CostBehaviourRule__c</referenceTo>
    <relationshipLabel>Cost Behaviour Rule Rate Cards</relationshipLabel>
    <relationshipName>CostBehaviourRuleRateCards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>