force-app/main/default/objects/KimbleOne__CostBehaviourRuleRateCard__c/fields/KimbleOne__RateCard__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RateCard__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rate Card</label>
    <referenceTo>KimbleOne__RateCard__c</referenceTo>
    <relationshipLabel>Cost Behaviour Rule Rate Cards</relationshipLabel>
    <relationshipName>CostBehaviourRuleRateCards</relationshipName>
    <type>Lookup</type>
</CustomField>